--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -16,9 +16,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
+    "nodmeon": "^0.0.1-security",
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.4"
   }
 }
